correction du z-index

--- a/imports/ui/components/navigation/navigation.less
+++ b/imports/ui/components/navigation/navigation.less
@@ -8,7 +8,7 @@ md-backdrop.md-sidenav-backdrop{
   height : auto;
   display : block;
   position : fixed !important;
-  z-index: 4001;
+  z-index: 4005;
 }
 md-list-item > md-icon:first-child:not(.md-avatar-icon){
 
@@ -33,5 +33,5 @@ img{
 }
 
 .md-sidenav-fixed{
-  position: fixed; z-index:4002; height : 100%;
+  position: fixed; z-index:4010; height : 100%;
 }
